<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:hint="@string/login_username_label"
        android:inputType="text|textEmailAddress"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:hint="@string/login_password_label"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLogin"
            style="@style/AppTheme"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/login_label" />

        <Button
            android:id="@+id/btnQuit"
            style="@style/AppTheme"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/login_quit_label" />
    </LinearLayout>

</LinearLayout>