<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- <EditText
        android:id="@+id/txtCustomerId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:hint="@string/oc_enter_customer"
        android:inputType="textEmailAddress"
        android:text="@string/oc_default_customer"
        android:textSize="20sp"/> -->
    
    <TextView 
        android:id="@+id/lblStore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/oc_select_store" 
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/spnrSession"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:entries="@array/sessions"
        android:textSize="20sp"/>

    <TextView 
        android:id="@+id/lblDatePicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/oc_delivery_date" 
        android:textSize="20sp"
        android:drawSelectorOnTop = "true"/>

    <EditText
        android:id="@+id/txtRemarks"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:hint="@string/oc_remarks"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:textSize="20sp" />

</LinearLayout>